--- a/my-app/src/components/scss/components/_login.scss
+++ b/my-app/src/components/scss/components/_login.scss
@@ -1,28 +1,28 @@
-/* .login {
-  background-color: #F2AC29;
+// componente login --> style
+.login {
+  background-color:#0D0D0D;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 1rem;
   font-size: 1.2em;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-.form {
-  background-color: #f2f2f2;
-  border-radius: 10px;
-  padding: 1rem;
-  height: 60vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+p{
+  color: #F2AC29;
 }
-.user{
+input{
   padding: 5px;
   height: 2.5em;
   width: 90%; 
-  border: 1px solid grey;
+  border-radius: 9px;
+  outline-style: none;
+  border: none;
   margin: 0.8em;
+}
+.pink:focus {
+  box-shadow: 0 0 5px rgba(242, 172, 41, 1);
+  border: 1px solid rgba(242, 160, 42, 0.8);
 }
 .btn-login{
   background-color: #0D0D0D;
@@ -46,4 +46,6 @@
 }
 .error-message{
   color: #F2AC29
-} */
+}
+
+ 
