añadiendo media query

--- a/my-app/src/components/scss/components/_login.scss
+++ b/my-app/src/components/scss/components/_login.scss
@@ -47,5 +47,10 @@ input{
 .error-message{
   color: #F2AC29
 }
+@media screen and (min-width:900px){
+  .login{
+    background-color:#F2AC29;
+  }
+}
 
  
