--- a/my-app/src/components/css/styles.css
+++ b/my-app/src/components/css/styles.css
@@ -46,6 +46,10 @@ input {
 .error-message {
   color: #F2AC29; }
 
+@media screen and (min-width: 900px) {
+  .login {
+    background-color: #F2AC29; } }
+
 body {
   margin: 0;
   font-family: 'Quattrocento Sans', sans-serif; }
