--- a/my-app/src/scss/styles.scss
+++ b/my-app/src/scss/styles.scss
@@ -2,6 +2,7 @@
 // scss principal
 @import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans&display=swap');
 @import 'components/login';
+@import 'components/header';
 
 body{
 margin: 0;
