--- a/my-app/src/scss/styles.scss
+++ b/my-app/src/scss/styles.scss
@@ -3,7 +3,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quattrocento+Sans&display=swap');
 @import 'components/login';
 @import 'components/header';
-
+@import 'components/products';
 body{
 margin: 0;
 font-family: 'Quattrocento Sans', sans-serif;
