--- a/my-app/src/css/styles.css
+++ b/my-app/src/css/styles.css
@@ -154,6 +154,30 @@ input {
 #btn-menu:checked ~ .nav {
   margin: 0; }
 
+  .nav-img{
+    position: relative;
+    padding: 0px;
+    width: 20%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .btn-break-dinner{
+    background-color: #F2AC29;
+    border-radius: 1%;
+    width: 25%;
+    height: 2em;
+    color: white;
+    letter-spacing: 0.2rem;
+    transition: 0.3s opacity ease;
+    cursor: pointer;
+    font-size: 0.9em;
+    margin: 0.8em;
+  }
+  
+  .btn-da:hover{
+   opacity: 0.6;
+  }
 @media screen and (min-width: 900px) {
   .header label {
     display: none; }
