--- a/my-app/src/scss/components/_header.scss
+++ b/my-app/src/scss/components/_header.scss
@@ -1,49 +1,54 @@
-@import 'mixings.scss' ;
+@import 'mixings' ;
 .hide{
   display: none;
 }
 .header{
   background:#F2AC29; 
+  width: 48em;
+    label{
+      display: inline-block;
+      font-size: 2em;
+      color: #fff;
+      width: 50px;
+      height: 50px;
+      padding: 10px;
+      border-right: 1px solid #fff;
+    }
+    .nav{
+      background-color: #F2AC29; 
+      width: 100%;
+      position: absolute;
+      margin-left: -100%;
+      ul{
+        margin: 0;
+        list-style: none;
+        padding: 0;
+        li {
+          flex-grow: 1;
+          .link {
+            display: block;
+            padding: 15px 20px;
+            color: #fff;
+            text-decoration: none;
+          }
+        }
+      }
+    }
+  }
 
-}
-.header label{
-  display: inline-block;
-  font-size: xx-large;
-  width: 50px;
-  height: 50px;
-  padding: 10px;
-  border-right: 1px solid #fff;
-}
 .header label :hover{
   cursor: pointer;
   background: rgba(0, 0, 0, 0.3);
 }
-.nav{
-  background-color: #F2AC29; 
-  width: 100%;
-  position: absolute;
-  margin-left: -100%;
-}
+
 .column{
   @include flex-col-row(column)
  }
-.nav ul{
-  margin: 0;
-  list-style: none;
-  padding: 0;
-}
-.nav li {
-  flex-grow: 1;
-}
+
 .nav li:hover {
   background: rgba(0, 0, 0, 0.2);
 }
-.link {
-  display: block;
-  padding: 15px 20px;
-  color: #fff;
-  text-decoration: none;
-}
+
 #btn-menu:checked~.nav {
   margin: 0;
 }
@@ -62,30 +67,6 @@
 //     font-size: 45px;
 //   }
 // }
-@media screen and (min-width:900px) {
-  .header label {
-    display: none;
-}
-.nav {
-  margin: 0;
-  width: 100%;
-  position: inherit;
-}
-.nav ul {
-  display: flex;
-  flex-direction: row;
-}
-.link {
-  text-align: center;
-  padding: 2%;
-}
-  .img {
-    width: 25%;
-  }
-  .cerrar {
-    font-size: 12px;
-  }
-  .bienvenida {
-    font-size: 21px;
-  }
-}
+// @media screen and (min-width:900px) {
+ 
+// }
