--- a/my-app/src/scss/styles.scss
+++ b/my-app/src/scss/styles.scss
@@ -11,7 +11,7 @@ margin: 0;
 font-family: 'Quattrocento Sans', sans-serif;
 }
 // PARA TABLET
-// ------tablet parada
+// ----- tablet parada
 @media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait){
   .form-login{
     background-color:rgba(13, 13, 13, 0.50);
