--- a/my-app/src/scss/components/_header.scss
+++ b/my-app/src/scss/components/_header.scss
@@ -4,7 +4,6 @@
 }
 .header{
   background:#F2AC29; 
-  width: 48em;
     label{
       display: inline-block;
       font-size: 2em;
@@ -13,6 +12,10 @@
       height: 50px;
       padding: 10px;
       border-right: 1px solid #fff;
+    }
+    .crown{
+      margin-left:30%;
+      margin-right: 30%;
     }
     .nav{
       background-color: #F2AC29; 
