--- a/my-app/src/scss/components/_products.scss
+++ b/my-app/src/scss/components/_products.scss
@@ -1,14 +1,32 @@
 @import 'mixings';
 // pintado de cada producto
-.product{
-  margin: 1em;
-  width:10em;
-  height: 12em;
-  @include flex-col-row(column);
-  align-items: center;
-  border:1px solid grey;
+// .card{
+//   margin: 1em;
+//   width:10em;
+//   height: 12em;
+//   @include flex-col-row(column);
+//   align-items: center;
+//   border:1px solid grey;
+// }
+.product-img{
+  width: 100%;
+  height: 70%;
 }
-.nav-img{
-  width: 8em;
-  height:8em;
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 30%;
+  margin-bottom: 5%;
+  background-color: #EBEFF1;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+.price{
+  padding: 10px;
 }
