--- a/my-app/src/scss/components/_take-orders.scss
+++ b/my-app/src/scss/components/_take-orders.scss
@@ -1,7 +1,7 @@
 @import 'mixings';
 .products-container{
 margin: 2em;
-background-color:#E0E3E4;
+background-color:#e0e3e42e;
 }
 .btn-break-dinner{
 @include btn(#F29A2E, 25%, 2em, white);
@@ -18,10 +18,12 @@ margin: 0.8em;
   padding: 2em;
   display: flex;
   flex-flow: row wrap;
- background-color: #EBEFF1;
+  justify-content: space-around;
+ background-color: #ebeff13d;
 }
 main{
-  background-color:#E0E3E4;
+  background-image: url(img/burger-2.jpg);
+  background-size: contain;
   @include flex-col-row(column);
   align-items: center;
 }
