--- a/my-app/src/css/styles.css
+++ b/my-app/src/css/styles.css
@@ -112,8 +112,7 @@
   display: none; }
 
 .header {
-  background: #F2AC29;
-  width: 48em; }
+  background: #F2AC29; }
   .header label {
     display: inline-block;
     font-size: 2em;
@@ -122,6 +121,9 @@
     height: 50px;
     padding: 10px;
     border-right: 1px solid #fff; }
+  .header .crown {
+    margin-left: 30%;
+    margin-right: 30%; }
   .header .nav {
     background-color: #F2AC29;
     width: 100%;
@@ -153,27 +155,41 @@
 #btn-menu:checked ~ .nav {
   margin: 0; }
 
-.product {
-  margin: 1em;
-  width: 10em;
-  height: 12em;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid grey; }
+.product-img {
+  width: 100%;
+  height: 60%; }
 
-.nav-img {
-  width: 8em;
-  height: 8em; }
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 24%;
+  margin-bottom: 3%;
+  background-color: #EBEFF1; }
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2); }
+
+.container {
+  padding: 0px 0px 0px 2px;
+  height: 40%; }
+
+.text-center{
+ text-align: center;
+}
+
+.price {
+  padding: 1%; }
 
 .products-container {
-  margin: 2em;
-  background-color: #E0E3E4; }
+  background-color: #e0e3e42e;
+  width: 94%;
+  margin: 3em;
+  padding: 1em; }
 
 .btn-break-dinner {
   background-color: #F29A2E;
   width: 25%;
-  height: 2em;
+  height: 2.5em;
   color: white;
   border-radius: 15px;
   border: none;
@@ -191,20 +207,81 @@
   padding: 2em;
   display: flex;
   flex-flow: row wrap;
-  background-color: #EBEFF1; }
+  justify-content: space-around;
+  background-color: #ebeff13d; }
+
+.take-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 70%;
+  padding: 2em;
+  margin: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: #EBEFF1;
+}
+.take-name{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: #EBEFF1;
+  padding: 2em;
+  margin: auto;
+  width: 90%;
+  align-items: center;
+}
+column{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.border-top {
+  background-color: rgba(0, 0, 0, .03);
+  border-top: 1px solid rgba(0, 0, 0, .125)
+}
 
 main {
-  background-color: #E0E3E4;
+  background-image: url(img/burger-2.jpg);
+  background-size: contain;
   display: flex;
   flex-direction: column;
   align-items: center; }
 
 .form-cliente {
-  margin: 1em;
-  padding: 0.5em;
-  width: 40%;
+  display: flex; 
+  align-items: center;
+  margin: 3em;
+  padding: 1em;
+  width: 95%;
   height: 3em;
   background-color: #EBEFF1; }
+
+.name-cliente{
+  border: 1px dotted #999;
+  border-radius: 0;
+  -webkit-appearance: none;
+  padding: 10px;
+}
+.margin-1{
+  margin: 1em;
+}
+.font-size-1{
+  font-size: 1em;
+}
+.font-size-15{
+  font-size: 1.5em;
+  margin: 2em;
+}
+
+.btn-cliente{
+  background-color: #3594cc;
+  color: white;
+  font-weight: bolder;
+  border-radius: 20px;
+  padding: -10px; }
+.btn-cliente:hover{
+  background-color: #4aaae2;
+  color: white;
+}
 
 body {
   margin: 0;
@@ -217,14 +294,23 @@ body {
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
   .form-login {
     width: 60%;
-    background-color: rgba(13, 13, 13, 0.5); } }
-  
+    background-color: rgba(13, 13, 13, 0.5); } 
+  .card {
+    font-size: 1em;
+  }
+  .subproducts-container{
+    width: 93%;
+  }
+}
 
 @media screen and (min-width: 1024px) {
   .form-login {
     width: 40%; }
-  .header label {
-    display: block; }
+  /* .header label {
+    display: none; } */
+    .subproducts-container{
+      width: 93.4%;
+    }
   .nav {
     margin: 0;
     width: 100%;
