añadiendo crear usuario, editar y eliminar al igual que productos

--- a/my-app/src/scss/styles.scss
+++ b/my-app/src/scss/styles.scss
@@ -6,6 +6,7 @@
 @import 'components/products';
 @import 'components/take-orders';
 @import 'components/cliente';
+@import 'components/view-admin';
 body{
 margin: 0;
 font-family: 'Quattrocento Sans', sans-serif;
@@ -56,3 +57,4 @@ font-family: 'Quattrocento Sans', sans-serif;
     font-size: 21px;
   }
 }
+// tt
