--- a/my-app/src/css/styles.css
+++ b/my-app/src/css/styles.css
@@ -223,9 +223,7 @@ main {
   align-items: center;
   display: flex;
   flex-direction: column;
-  border: 1px solid black;
-  width: 100%;
-  height: 50em; }
+  width: 100%; }
 
 .sub-container-table {
   display: flex;
@@ -238,8 +236,7 @@ main {
 
 .table-list {
   border-collapse: collapse;
-  width: 90%;
-  border: 1px solid violet; }
+  width: 90%; }
 
 .table-list th, .table-list td {
   border: 1px solid #ddd;
